# native/server/src/ws_hub.rs
@@ -1047,6 +1047,10 @@ mod tests {
             uploaded_at_completion: 0,
             seeding_status: 0,
             seeding_message: String::new(),
+            seed_ratio_limit_milli: -2,
+            seed_post_ratio_limit_milli: -2,
+            seed_time_limit_minutes: -2,
+            seed_inactive_time_limit_minutes: -2,
             referrer: String::new(),
             group_id: String::new(),
             rss_source_id: String::new(),
@@ -1082,6 +1086,10 @@ mod tests {
             uploaded_at_completion: 0,
             seeding_status: 0,
             seeding_message: String::new(),
+            seed_ratio_limit_milli: -2,
+            seed_post_ratio_limit_milli: -2,
+            seed_time_limit_minutes: -2,
+            seed_inactive_time_limit_minutes: -2,
             referrer: String::new(),
             group_id: String::new(),
             rss_source_id: String::new(),
